# ha-openai-realtime

./: repository.json
.github/workflows/: build-addon.yml
home-assistant-voice-pe/: INSTALLATION.md  download_websocket_client.py  pyproject.toml
home-assistant-voice-pe/esphome/components/voice_assistant_websocket/: README.md
openai_realtime_voice_agent/: MIGRATION_NOTES.md  config.yaml  pyproject.toml
openai_realtime_voice_agent/app/: disconnect_tool.py  main.py  mcp_service.py  recording_processor.py  websocket_server.py
openai_realtime_voice_agent/root/: run.sh
openai_realtime_voice_agent/test/: websocket-simple-test.html
